--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "npm run build && webpack-dev-server --port=8000"
+    "start": "webpack serve --mode=development"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,9 @@
   "devDependencies": {
     "eslint-config-mcr-codes": "^1.3.0",
     "raw-loader": "^0.5.1",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^3.1.11"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "phaser": "^3.3.0"
