--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve --mode=development"
+    "start": "webpack serve --watch --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,13 @@
   },
   "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
   "devDependencies": {
-    "eslint-config-mcr-codes": "^1.3.0",
     "raw-loader": "^0.5.1",
-    "webpack": "^4.0.0",
+    "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "inkjs": "^1.11.0",
     "phaser": "^3.3.0"
   }
 }
