--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.9",
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
+  "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.config.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "start": "webpack serve --watch --config webpack.config.js"
   },
   "repository": {
@@ -17,8 +20,10 @@
   "bugs": {
     "url": "https://github.com/photonstorm/phaser3-project-template/issues"
   },
-  "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^6.3.0",
+    "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "raw-loader": "^0.5.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
