--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,10 @@
         "es6": true
     },
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 2020
     },
     "rules": {
         "indent": [
