--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "inkjs": "^1.11.0",
-    "phaser": "^3.3.0"
+    "phaser": "^3.3.0",
+    "phaser-ui-tools": "^2.0.0-beta"
   }
 }
